# BOSCH-BMI160-ROS-Library

./: CMakeLists.txt  README.md  package.xml
include/imu_bmi160/: bmi160_defs.h  bmi160_interface.h
src/: bmi160.cpp  bmi160_acc_example.cpp  bmi160_interface.cpp
